include(ECMMarkAsTest)

find_package(Qt5 5.9 QUIET REQUIRED Test)

macro(rkward_executable_tests)
  foreach(_testname ${ARGN})
    add_executable(${_testname} ${_testname}.cpp)

    target_link_libraries(${_testname} PRIVATE rkward_lib Qt5::Test)

    add_test(NAME rkward-${_testname} COMMAND ${_testname})
    ecm_mark_as_test(${_testname})
  endforeach()
endmacro()

rkward_executable_tests(
  core_test
)

# add_executable(linktest1 linktest.cpp)
# target_link_libraries(linktest1 PUBLIC rkward_lib Qt5::Test Qt5::WebEngineWidgets)
# add_test(NAME rkward-linktest1 COMMAND linktest1)
# ecm_mark_as_test(linktest1)
# add_executable(linktest2 linktest.cpp)
# target_link_libraries(linktest2 PRIVATE rkward_lib Qt5::Test Qt5::Widgets)
# add_test(NAME rkward-linktest2 COMMAND linktest2)
# ecm_mark_as_test(linktest2)
# add_executable(linktest3 linktest.cpp)
# target_link_libraries(linktest3 PRIVATE rkward_lib Qt5::Test KF5::WindowSystem)
# add_test(NAME rkward-linktest3 COMMAND linktest3)
# ecm_mark_as_test(linktest3)
# add_executable(linktest4 linktest.cpp)
# target_link_libraries(linktest4 PRIVATE rkward_lib Qt5::Test KF5::XmlGui)
# add_test(NAME rkward-linktest4 COMMAND linktest4)
# ecm_mark_as_test(linktest4)
# IF(KF5Crash_FOUND)
# 	add_executable(linktest5 linktest.cpp)
# 	target_link_libraries(linktest5 PRIVATE rkward_lib Qt5::Test KF5::Crash)
# 	add_test(NAME rkward-linktest5 COMMAND linktest5)
# 	ecm_mark_as_test(linktest5)
# ENDIF()
# add_executable(linktest6 linktest.cpp)
# target_link_libraries(linktest6 PRIVATE rkward_lib Qt5::Test Qt5::Xml)
# add_test(NAME rkward-linktest6 COMMAND linktest6)
# ecm_mark_as_test(linktest6)
# add_executable(linktest7 linktest.cpp)
# target_link_libraries(linktest7 PRIVATE rkward_lib Qt5::Test Qt5::PrintSupport)
# add_test(NAME rkward-linktest7 COMMAND linktest7)
# ecm_mark_as_test(linktest7)
# add_executable(linktest8 linktest.cpp)
# target_link_libraries(linktest8 PRIVATE rkward_lib Qt5::Test KF5::TextEditor)
# add_test(NAME rkward-linktest8 COMMAND linktest8)
# ecm_mark_as_test(linktest8)
# add_executable(linktest9 linktest.cpp)
# target_link_libraries(linktest9 PRIVATE rkward_lib Qt5::Test KF5::Notifications)
# add_test(NAME rkward-linktest9 COMMAND linktest9)
# ecm_mark_as_test(linktest9)
# add_executable(linktest0 linktest.cpp)
# target_link_libraries(linktest0 PRIVATE rkward_lib Qt5::Test KF5::KIOFileWidgets)
# add_test(NAME rkward-linktest0 COMMAND linktest0)
# ecm_mark_as_test(linktest0)

add_executable(linktest linktest.cpp)
target_link_libraries(linktest PRIVATE Qt5::Test)
add_test(NAME rkward-linktest COMMAND linktest)
ecm_mark_as_test(linktest)
