INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libcore.a
libcore_a_SOURCES = rkvariable.cpp robjectlist.cpp robject.cpp rcontainerobject.cpp rkmodificationtracker.cpp \
	rfunctionobject.cpp renvironmentobject.cpp
noinst_HEADERS = rkvariable.h robjectlist.h robject.h rcontainerobject.h rkmodificationtracker.h \
	rfunctionobject.h renvironmentobject.h
