INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libdataeditor.a
libdataeditor_a_SOURCES = labelcell.cpp nameselectcell.cpp rtableitem.cpp twintable.cpp twintablemember.cpp typeselectcell.cpp rkdrag.cpp rkeditor.cpp rkeditordataframe.cpp tablecolumn.cpp twintabledatamember.cpp twintablemetamember.cpp celleditor.cpp
noinst_HEADERS = labelcell.h nameselectcell.h rkdrag.h rtableitem.h twintable.h twintablemember.h typeselectcell.h rkeditor.h rkeditordataframe.h tablecolumn.h twintabledatamember.h twintablemetamember.h celleditor.h
