INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libdataeditor.a
libdataeditor_a_SOURCES = twintable.cpp twintablemember.cpp rkdrag.cpp rkeditor.cpp rkeditordataframe.cpp tablecolumn.cpp twintabledatamember.cpp twintablemetamember.cpp celleditor.cpp
noinst_HEADERS = rkdrag.h twintable.h twintablemember.h rkeditor.h rkeditordataframe.h tablecolumn.h twintabledatamember.h twintablemetamember.h celleditor.h
