INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libmisc.a
libmisc_a_SOURCES = rkerrordialog.cpp rkmenu.cpp rkspinbox.cpp \
			getfilenamewidget.cpp rkmenulist.cpp rkobjectlistview.cpp 		rkcanceldialog.cpp xmlhelper.cpp \
	multistringselector.cpp rkcommonfunctions.cpp
noinst_HEADERS = rkerrordialog.h rkmenu.h rkspinbox.h 		getfilenamewidget.h \
	rkmenulist.h rkobjectlistview.h rkcanceldialog.h xmlhelper.h 	multistringselector.h \
	rkcommonfunctions.h

