INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libmisc.a
libmisc_a_SOURCES = rkerrordialog.cpp rkspinbox.cpp \
	getfilenamewidget.cpp rkobjectlistview.cpp rkcanceldialog.cpp xmlhelper.cpp \
	multistringselector.cpp rkcommonfunctions.cpp rkprogresscontrol.cpp rksaveobjectchooser.cpp \
	rkdummypart.cpp
noinst_HEADERS = rkerrordialog.h rkspinbox.h getfilenamewidget.h \
	rkobjectlistview.h rkcanceldialog.h xmlhelper.h multistringselector.h \
	rkcommonfunctions.h rkprogresscontrol.h rksaveobjectchooser.h \
	rkdummypart.h

