INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libplugin.a
libplugin_a_SOURCES = rkcomponentmap.cpp rkcomponentproperties.cpp rkcomponent.cpp \
	rkstandardcomponent.cpp rkvarselector.cpp rkvarslot.cpp rkformula.cpp rkradio.cpp \
	rkcheckbox.cpp rkpluginspinbox.cpp rkinput.cpp rkpluginbrowser.cpp
# rkplugin.cpp \
#	rkpluginhandle.cpp rkpluginwidget.cpp rktext.cpp \
#	  rknote.cpp

noinst_HEADERS = rkcomponentmap.h rkcomponentproperties.h rkcomponent.h \
	rkstandardcomponent.h rkvarselector.h rkvarslot.h rkformula.h rkradio.h \
	rkcheckbox.h rkpluginspinbox.h rkinput.h rkpluginbrowser.h
# rkplugin.h rkpluginhandle.h \
# rkpluginwidget.h rktext.h  \
# rknote.h 


