INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libplugin.a
libplugin_a_SOURCES = rkcomponentmap.cpp rkcomponentproperties.cpp rkcomponent.cpp \
	rkstandardcomponent.cpp rkvarselector.cpp rkvarslot.cpp rkformula.cpp rkradio.cpp \
	rkcheckbox.cpp rkpluginspinbox.cpp rkinput.cpp rkpluginbrowser.cpp rktext.cpp \
	rktabpage.cpp rkstandardcomponentgui.cpp rkdropdown.cpp

noinst_HEADERS = rkcomponentmap.h rkcomponentproperties.h rkcomponent.h \
	rkstandardcomponent.h rkvarselector.h rkvarslot.h rkformula.h rkradio.h \
	rkcheckbox.h rkpluginspinbox.h rkinput.h rkpluginbrowser.h rktext.h \
	rktabpage.h rkstandardcomponentgui.h rkdropdown.h


